@@ -1,0 +1,3 @@
+<span>vanilla phrase</span>
+
+<span class="term">term</span>
